# mcp-fetch-server

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_fetch_server.spec  pyproject.toml
.cursor/: mcp.json
docs/: PROJECT_DOCUMENTATION.md  USER_MANUAL.md
scripts/: build_exe.ps1  docker-up.ps1  docker-up.sh
searxng/: settings.yml
src/mcp_fetch_server/: __init__.py  __main__.py  admin.py  auth.py  completions.py  config.py  config_snapshot.py  converters.py  fetch_service.py  fetcher.py  files.py  history.py  http_headers.py  links.py  middleware.py  prompts.py  resources.py  search.py  security.py  server.py  tools_extra.py
tests/: test_admin.py  test_fetch_client.py  test_fetch_tool.py  test_files.py  test_history.py  test_http.py  test_links.py  test_search.py  test_security.py  test_server_registration.py  test_tools_extra.py
