[project]
name = "mcp-fetch-server"
version = "0.1.0"
description = "MCP server for fetching and converting web content to markdown"
readme = "README.md"
authors = [
    { name = "Nariman Amiri", email = "nariman.amiri99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.2.3",
    "mcp[cli]>=1.27,<2",
    "protego>=0.6.2",
    "pydantic-settings>=2.14.2",
    "readability-lxml>=0.8.4.1",
]

[project.scripts]
mcp-fetch-server = "mcp_fetch_server:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
